--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
-*.local
+# d3ist
+# d3ist-ssr
+# *.3local
 
 # Editor directories and files
 .vscode/*
